--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
 <html>
- 
+
+<head>
+  <title>Matt Learns to Code</title>
+</head>
+
 <body>
   <h1>Matt Wagner</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <p>Welcome to my website!  Early days - more to come!</p>
 </body>
  
 </html>
