add basic content and layout to page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="EN">
 
 <head>
   <title>Matt Learns to Code</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>Matt Wagner</h1>
-  <p>Welcome to my website!  Early days - more to come!</p>
-</body>
- 
+  <header>
+    <h1>Matt Wagner</h1>
+    <p id="description">Welcome to my website!  Early days - more to come!</p>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li>Projects</li>
+        <li>Links</li>
+      </ul>
+    </nav>
+  </header>
+  
+  <main>
+    <h2>About me:</h2>
+    <div id="about">
+      <img src="images/Stachprofilepic.jpg" alt="A man with a bold moustache">
+      <p>Life has a way of surprising you... If someone had told me a year ago that I'd be spending a few hours each day learning to code I'd have laughed.</p>
+      <br>
+      <p>In case you've accidentally found this page, I'm still learning and this is part of the process - the colours and borders are just part of my "process" lol</p>
+    </div>
+    <h2>What I'm working on:</h2>
+    <div id="projects">
+
+    </div>
+  </main>
+  <footer>
+    
+  </footer>
+</body> 
 </html>
