--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="EN">
-
 <head>
   <title>Matt Learns to Code</title>
   <meta charset="UTF-8">
@@ -9,10 +8,9 @@
 </head>
 
 <body>
-  <header>   
-    <img src="images/Stachprofilepic.jpg" alt="A man with a bold moustache">
-    <h1>Matt Wagner</h1>
-    
+  <!--HEADER-->
+  <header>    
+    <p id="header-name">@MattLearns2Code</p>   
     <nav>
       <ul>
         <li>About</li>
@@ -21,24 +19,30 @@
       </ul>
     </nav>
   </header>
-  
+  <!--MAIN-->
   <main>
     <h2>About me:</h2>
+    <img src="images/Stachprofilepic.jpg" alt="A man with a bold moustache">
     <div id="about">
       <p>Life has a way of surprising you... If someone had told me a year ago that I'd be spending a few hours each day learning to code I'd have laughed.</p>
-    
       <p>In case you've accidentally found this page, I'm still learning and this is part of the process </p>
     </div>
-    <h2>What I'm working on and a further test:</h2>
-    <div id="projects">
-      <a href="/FrontEnd_Mentor/qrindex.html" target="_blank">Frontend Mentor QR code challenge</a>
-
+    <h2>What I'm working on and a further test:</h2>    
+    <div class="project-container">
+      <div class="project-box">
+        <img src="/FrontEnd_Mentor/images/image-qr-code.png" alt="">
+        <a href="/FrontEnd_Mentor/qrindex.html" target="_blank">Frontend Mentor QR code challenge</a>
+      </div>
+      <div class="project-box"></div>
+      <div class="project-box"></div>
     </div>
   </main>
+  <!--FOOTER-->
   <footer>
     <h2>Links:</h2>
     <a href="https://www.linkedin.com/in/georgemwagner/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
     <a href="https://twitter.com/MattLearns2Code" target="_blank"><i class="fa-brands fa-twitter-square"></i></a>
+    <p>Connect with me on Twitter and LinkedIn, or send me an email at <a href="mailto:mattlearns2code@gmail.com" target="_blank">MattLearns2Code@gmail.com</a></p>
   </footer>
 </body> 
 </html>
