--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     </nav>
   </header>
   <!--MAIN-->
-  <main>
+  <main>  
     <h2>About me:</h2>
-    <img src="images/Stachprofilepic.jpg" alt="A man with a bold moustache">
     <div id="about">
-      <p>Life has a way of surprising you... If someone had told me a year ago that I'd be spending a few hours each day learning to code I'd have laughed.</p>
-      <p>In case you've accidentally found this page, I'm still learning and this is part of the process </p>
+      <img src="images/Stachprofilepic.jpg" alt="A man with a bold moustache">
+      <p>Life has a way of surprising you... If someone had told me a year ago that I'd be spending a few hours each day learning to code I'd have laughed.
+      In case you've accidentally found this page, I'm still learning and this is part of the process </p>
     </div>
     <h2>What I'm working on and a further test:</h2>    
     <div class="project-container">
@@ -39,10 +39,11 @@
   </main>
   <!--FOOTER-->
   <footer>
-    <h2>Links:</h2>
-    <a href="https://www.linkedin.com/in/georgemwagner/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-    <a href="https://twitter.com/MattLearns2Code" target="_blank"><i class="fa-brands fa-twitter-square"></i></a>
-    <p>Connect with me on Twitter and LinkedIn, or send me an email at <a href="mailto:mattlearns2code@gmail.com" target="_blank">MattLearns2Code@gmail.com</a></p>
+    <div class="icons">
+      <a href="https://www.linkedin.com/in/georgemwagner/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://twitter.com/MattLearns2Code" target="_blank"><i  class="fa-brands fa-twitter-square"></i></a>
+    </div>
+    <p>Connect with me on Twitter and LinkedIn, or send me an email at <a href="mailto:mattlearns2code@gmail.com" target="_blank" id="email">MattLearns2Code@gmail.com</a></p>
   </footer>
 </body> 
 </html>
