--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         <img src="/FrontEnd_Mentor/images/image-qr-code.png" alt="">
         <a href="/FrontEnd_Mentor/qrindex.html" target="_blank">Frontend Mentor QR code challenge</a>
       </div>
-      <div class="project-box"></div>
+      <div class="project-box">
+        <a href="https://mattlearnstocode.github.io/FM-Product-Card/">Frontend Mentor Product Preview Challenge</a>
+      </div>
       <div class="project-box"></div>
     </div>
   </main>
