minor change to about section

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
         <a href="/FrontEnd_Mentor/qrindex.html" target="_blank">Frontend Mentor QR code challenge</a>
       </div>
       <div class="project-box">
-        <a href="https://mattlearnstocode.github.io/FM-Product-Card/">Frontend Mentor Product Preview Challenge</a>
+        <a href="https://mattlearnstocode.github.io/FM-Product-Card/" target="_blank">Frontend Mentor Product Preview Challenge</a>
       </div>
-      <div class="project-box"></div>
+      <div class="project-box">
+        <a href="#" target="_blank">This will link to my CodePen</a>
+      </div>
     </div>
   </main>
   <!--FOOTER-->
